@@ -14,6 +14,7 @@
 
 package com.liferay.portal.action;
 
+import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.json.JSONArray;
 import com.liferay.portal.kernel.json.JSONException;
 import com.liferay.portal.kernel.json.JSONFactoryUtil;
@@ -22,6 +23,9 @@ import com.liferay.portal.kernel.json.JSONSerializable;
 import com.liferay.portal.kernel.json.JSONSerializer;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.security.access.control.AccessControlThreadLocal;
+import com.liferay.portal.kernel.service.ServiceContext;
+import com.liferay.portal.kernel.service.ServiceContextUtil;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.ClassUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
@@ -30,14 +34,9 @@ import com.liferay.portal.kernel.util.LocalizationUtil;
 import com.liferay.portal.kernel.util.ParamUtil;
 import com.liferay.portal.kernel.util.SetUtil;
 import com.liferay.portal.kernel.util.StringBundler;
-import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.security.ac.AccessControlThreadLocal;
-import com.liferay.portal.service.ServiceContext;
-import com.liferay.portal.service.ServiceContextUtil;
 import com.liferay.portal.struts.JSONAction;
-import com.liferay.portal.util.ClassLoaderUtil;
 import com.liferay.portal.util.PropsValues;
 
 import java.lang.reflect.Method;
@@ -54,9 +53,6 @@ import java.util.regex.Pattern;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
-import org.apache.struts.action.ActionForm;
-import org.apache.struts.action.ActionMapping;
 
 /**
  * @author Brian Wing Shun Chan
@@ -86,7 +82,6 @@ public class JSONServiceAction extends JSONAction {
 
 	@Override
 	public String getJSON(
-			ActionMapping actionMapping, ActionForm actionForm,
 			HttpServletRequest request, HttpServletResponse response)
 		throws Exception {
 
@@ -102,8 +97,9 @@ public class JSONServiceAction extends JSONAction {
 			return null;
 		}
 
-		ClassLoader contextClassLoader =
-			ClassLoaderUtil.getContextClassLoader();
+		Thread currentThread = Thread.currentThread();
+
+		ClassLoader contextClassLoader = currentThread.getContextClassLoader();
 
 		Class<?> clazz = contextClassLoader.loadClass(className);
 
@@ -115,6 +111,7 @@ public class JSONServiceAction extends JSONAction {
 		}
 
 		Method method = (Method)methodAndParameterTypes[0];
+
 		Type[] parameterTypes = (Type[])methodAndParameterTypes[1];
 		Object[] args = new Object[serviceParameters.length];
 
@@ -127,8 +124,10 @@ public class JSONServiceAction extends JSONAction {
 		try {
 			if (_log.isDebugEnabled()) {
 				_log.debug(
-					"Invoking " + clazz + " on method " + method.getName() +
-						" with args " + Arrays.toString(args));
+					StringBundler.concat(
+						"Invoking ", String.valueOf(clazz), " on method ",
+						method.getName(), " with args ",
+						Arrays.toString(args)));
 			}
 
 			Object returnObj = null;
@@ -147,15 +146,15 @@ public class JSONServiceAction extends JSONAction {
 			if (returnObj != null) {
 				return getReturnValue(returnObj);
 			}
-			else {
-				return JSONFactoryUtil.getNullJSON();
-			}
+
+			return JSONFactoryUtil.getNullJSON();
 		}
 		catch (Exception e) {
 			if (_log.isDebugEnabled()) {
 				_log.debug(
-					"Invoked " + clazz + " on method " + method.getName() +
-						" with args " + Arrays.toString(args),
+					StringBundler.concat(
+						"Invoked ", String.valueOf(clazz), " on method ",
+						method.getName(), " with args ", Arrays.toString(args)),
 					e);
 			}
 
@@ -186,22 +185,22 @@ public class JSONServiceAction extends JSONAction {
 		else if (typeNameOrClassDescriptor.equals("double") ||
 				 typeNameOrClassDescriptor.equals(Double.class.getName())) {
 
-			return new Double(ParamUtil.getDouble(request, parameter));
+			return Double.valueOf(ParamUtil.getDouble(request, parameter));
 		}
 		else if (typeNameOrClassDescriptor.equals("int") ||
 				 typeNameOrClassDescriptor.equals(Integer.class.getName())) {
 
-			return new Integer(ParamUtil.getInteger(request, parameter));
+			return Integer.valueOf(ParamUtil.getInteger(request, parameter));
 		}
 		else if (typeNameOrClassDescriptor.equals("long") ||
 				 typeNameOrClassDescriptor.equals(Long.class.getName())) {
 
-			return new Long(ParamUtil.getLong(request, parameter));
+			return Long.valueOf(ParamUtil.getLong(request, parameter));
 		}
 		else if (typeNameOrClassDescriptor.equals("short") ||
 				 typeNameOrClassDescriptor.equals(Short.class.getName())) {
 
-			return new Short(ParamUtil.getShort(request, parameter));
+			return Short.valueOf(ParamUtil.getShort(request, parameter));
 		}
 		else if (typeNameOrClassDescriptor.equals(Calendar.class.getName())) {
 			Calendar cal = Calendar.getInstance(LocaleUtil.getDefault());
@@ -265,9 +264,8 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new boolean[0][0];
-			}
+
+			return new boolean[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[D")) {
 			String[] values = request.getParameterValues(parameter);
@@ -288,9 +286,8 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new double[0][0];
-			}
+
+			return new double[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[F")) {
 			String[] values = request.getParameterValues(parameter);
@@ -311,9 +308,8 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new float[0][0];
-			}
+
+			return new float[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[I")) {
 			String[] values = request.getParameterValues(parameter);
@@ -333,9 +329,8 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new int[0][0];
-			}
+
+			return new int[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[J")) {
 			String[] values = request.getParameterValues(parameter);
@@ -355,9 +350,8 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new long[0][0];
-			}
+
+			return new long[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[S")) {
 			String[] values = request.getParameterValues(parameter);
@@ -378,9 +372,8 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new short[0][0];
-			}
+
+			return new short[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[Ljava.lang.String")) {
 			String[] values = request.getParameterValues(parameter);
@@ -397,9 +390,8 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new String[0][0];
-			}
+
+			return new String[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals(
 					"java.util.Map<java.util.Locale, java.lang.String>")) {
@@ -410,13 +402,15 @@ public class JSONServiceAction extends JSONAction {
 		}
 		else {
 			try {
-				return JSONFactoryUtil.looseDeserializeSafe(value);
+				return JSONFactoryUtil.looseDeserialize(value);
 			}
 			catch (Exception e) {
 				_log.error(
-					"Unsupported parameter type for class " + clazz +
-						", method " + methodName + ", parameter " + parameter +
-							", and type " + typeNameOrClassDescriptor);
+					StringBundler.concat(
+						"Unsupported parameter type for class ",
+						String.valueOf(clazz), ", method ", methodName,
+						", parameter ", parameter, ", and type ",
+						typeNameOrClassDescriptor));
 
 				return null;
 			}
@@ -424,7 +418,8 @@ public class JSONServiceAction extends JSONAction {
 	}
 
 	/**
-	 * @see JSONWebServiceServiceAction#getCSRFOrigin(HttpServletRequest)
+	 * @see com.liferay.portal.jsonwebservice.JSONWebServiceServiceAction#getCSRFOrigin(
+	 *      HttpServletRequest)
 	 */
 	@Override
 	protected String getCSRFOrigin(HttpServletRequest request) {
@@ -484,7 +479,9 @@ public class JSONServiceAction extends JSONAction {
 		Method[] methods = clazz.getMethods();
 
 		for (Method curMethod : methods) {
-			if (curMethod.getName().equals(methodName)) {
+			String curMethodName = curMethod.getName();
+
+			if (curMethodName.equals(methodName)) {
 				Type[] curParameterTypes = curMethod.getGenericParameterTypes();
 
 				if (curParameterTypes.length == parameters.length) {
@@ -514,9 +511,10 @@ public class JSONServiceAction extends JSONAction {
 						String parametersString = StringUtil.merge(parameters);
 
 						_log.error(
-							"Obscure method name for class " + clazz +
-								", method " + methodName + ", and parameters " +
-									parametersString);
+							StringBundler.concat(
+								"Obscure method name for class ",
+								String.valueOf(clazz), ", method ", methodName,
+								", and parameters ", parametersString));
 
 						return null;
 					}
@@ -541,8 +539,10 @@ public class JSONServiceAction extends JSONAction {
 		String parametersString = StringUtil.merge(parameters);
 
 		_log.error(
-			"No method found for class " + clazz + ", method " + methodName +
-				", and parameters " + parametersString);
+			StringBundler.concat(
+				"No method found for class ", String.valueOf(clazz),
+				", method ", methodName, ", and parameters ",
+				parametersString));
 
 		return null;
 	}
@@ -622,8 +622,11 @@ public class JSONServiceAction extends JSONAction {
 				fieldDescriptor = "S";
 			}
 			else {
-				fieldDescriptor = "L".concat(fieldDescriptor).concat(
-					StringPool.SEMICOLON);
+				fieldDescriptor = "L".concat(
+					fieldDescriptor
+				).concat(
+					StringPool.SEMICOLON
+				);
 			}
 
 			return dimensions.concat(fieldDescriptor);
@@ -644,21 +647,20 @@ public class JSONServiceAction extends JSONAction {
 
 			return true;
 		}
-		else {
-			return false;
-		}
+
+		return false;
 	}
 
 	private static final String _REROUTE_PATH = "/api/json";
 
-	private static Log _log = LogFactoryUtil.getLog(JSONServiceAction.class);
+	private static final Log _log = LogFactoryUtil.getLog(
+		JSONServiceAction.class);
 
-	private static Pattern _fieldDescriptorPattern = Pattern.compile(
+	private static final Pattern _fieldDescriptorPattern = Pattern.compile(
 		"^(.*?)((\\[\\])*)$", Pattern.DOTALL);
 
-	private Set<String> _invalidClassNames;
-	private Set<String> _invalidMethodNames;
-	private Map<String, Object[]> _methodCache =
-		new HashMap<String, Object[]>();
+	private final Set<String> _invalidClassNames;
+	private final Set<String> _invalidMethodNames;
+	private final Map<String, Object[]> _methodCache = new HashMap<>();
 
 }
