@@ -59,9 +59,8 @@ public class LongType implements CompositeUserType, Serializable {
 		else if ((x == null) || (y == null)) {
 			return false;
 		}
-		else {
-			return x.equals(y);
-		}
+
+		return x.equals(y);
 	}
 
 	@Override
@@ -106,7 +105,7 @@ public class LongType implements CompositeUserType, Serializable {
 			// with a blank entry into a BIGINT
 
 			try {
-				value = new Long(
+				value = Long.valueOf(
 					GetterUtil.getLong(
 						StandardBasicTypes.STRING.nullSafeGet(
 							rs, names[0], session)));
@@ -119,9 +118,8 @@ public class LongType implements CompositeUserType, Serializable {
 		if (value == null) {
 			return DEFAULT_VALUE;
 		}
-		else {
-			return value;
-		}
+
+		return value;
 	}
 
 	@Override
