@@ -14,12 +14,12 @@
 
 package com.liferay.taglib.ui;
 
-import com.liferay.portal.kernel.servlet.PortalIncludeUtil;
+import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.HtmlUtil;
 import com.liferay.portal.kernel.util.ServerDetector;
-import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.Validator;
+import com.liferay.taglib.util.PortalIncludeUtil;
 
 import java.util.List;
 
@@ -49,13 +49,12 @@ public class TableIteratorTag extends TagSupport {
 				pageContext.setAttribute(
 					"tableIteratorObj", _list.get(_listPos));
 				pageContext.setAttribute(
-					"tableIteratorPos", new Integer(_listPos));
+					"tableIteratorPos", Integer.valueOf(_listPos));
 
 				return EVAL_BODY_AGAIN;
 			}
-			else {
-				return SKIP_BODY;
-			}
+
+			return SKIP_BODY;
 		}
 		catch (Exception e) {
 			throw new JspException(e);
@@ -98,14 +97,14 @@ public class TableIteratorTag extends TagSupport {
 
 				request.setAttribute("liferay-ui:table-iterator:list", _list);
 				request.setAttribute(
+					"liferay-ui:table-iterator:rowBreak", _rowBreak);
+				request.setAttribute(
 					"liferay-ui:table-iterator:rowLength",
 					String.valueOf(_rowLength));
 				request.setAttribute(
 					"liferay-ui:table-iterator:rowPadding", _rowPadding);
 				request.setAttribute(
 					"liferay-ui:table-iterator:rowValign", _rowValign);
-				request.setAttribute(
-					"liferay-ui:table-iterator:rowBreak", _rowBreak);
 				request.setAttribute("liferay-ui:table-iterator:width", _width);
 
 				PortalIncludeUtil.include(pageContext, getStartPage());
@@ -113,13 +112,12 @@ public class TableIteratorTag extends TagSupport {
 				pageContext.setAttribute(
 					"tableIteratorObj", _list.get(_listPos));
 				pageContext.setAttribute(
-					"tableIteratorPos", new Integer(_listPos));
+					"tableIteratorPos", Integer.valueOf(_listPos));
 
 				return EVAL_BODY_INCLUDE;
 			}
-			else {
-				return SKIP_BODY;
-			}
+
+			return SKIP_BODY;
 		}
 		catch (Exception e) {
 			throw new JspException(e);
@@ -130,9 +128,8 @@ public class TableIteratorTag extends TagSupport {
 		if (Validator.isNull(_bodyPage)) {
 			return _BODY_PAGE;
 		}
-		else {
-			return _bodyPage;
-		}
+
+		return _bodyPage;
 	}
 
 	public void setBodyPage(String bodyPage) {
@@ -178,18 +175,16 @@ public class TableIteratorTag extends TagSupport {
 		if (Validator.isNull(_endPage)) {
 			return _END_PAGE;
 		}
-		else {
-			return _endPage;
-		}
+
+		return _endPage;
 	}
 
 	protected String getStartPage() {
 		if (Validator.isNull(_startPage)) {
 			return _START_PAGE;
 		}
-		else {
-			return _startPage;
-		}
+
+		return _startPage;
 	}
 
 	private static final String _BODY_PAGE =
